removing bootstrap-tags from announced

--- a/pmp/static/partials/tags.html
+++ b/pmp/static/partials/tags.html
@@ -1,4 +1,4 @@
-<button ng-repeat="tag in inputTags" type="button" class="btn btn-default btn-sm spacing-r" ng-click="tagRemove(tag)">
+<button ng-repeat="tag in inputTags" type="button" class="btn btn-default btn-sm" ng-click="tagRemove(tag)">
   <span>
     {{tag}}
   </span>
