tags in growing

--- a/pmp/static/partials/tags.html
+++ b/pmp/static/partials/tags.html
@@ -1,6 +1,5 @@
-<button ng-repeat="tag in inputTags" type="button" class="btn btn-default btn-sm" ng-click="tagRemove(tag)">
-  <span>
-    {{tag}}
-  </span>
+<button ng-repeat="tag in inputTags" type="button" class="btn btn-default btn-sm"
+        ng-click="tagRemove(tag)">
+  <span>{{tag}}</span>
   <i class="glyphicon glyphicon-remove-sign"></i>
 </button>
