--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -38,7 +38,7 @@
      <div class="row" ng-hide="chainMode">
        <div class="panel-default">
          <div class="panel-body">
-           <div id="campaignList" style="padding-bottom: 0px;"></div>
+           <input-tags style="padding-bottom: 0px;"></input-tags>
          </div>
        </div>
      </div>
