--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -41,7 +41,7 @@
      <div class="row" ng-hide="!allRequestData.length">
        <div class="panel-default">
          <div class="panel-body">
-           <div id="campaignList" style="padding-bottom: 0px;"></div>
+           <input-tags style="padding-bottom: 0px;"></input-tags>
          </div>
        </div>
      </div>
