screenshot added to historical rm from performance

--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -167,7 +167,7 @@
           </small>
         </label>
       </form>
-      <div class="btn-group btn-group-sm col-lg-12 col-md-12 col-sm-12 spacing text-uppercase"
+      <div class="btn-group btn-group-sm pull-left spacing text-uppercase"
            ng-show="allRequestData.length">
         <button type="button" class="btn btn-primary text-center text-uppercase hidden-sm"
                 ng-disabled="true">
