--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -146,7 +146,7 @@
           <small>y axis zoom</small>
         </label>
         <br/>
-        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12 spacing">
           <input type="checkbox" ng-model="humanReadableNumbers"
                  ng-init="humanReadableNumbers=true">
           <small>Human Readable Numbers</small>
@@ -161,12 +161,37 @@
                placeholder="Default: 40">
       </div>
 
-      <button type="button" ng-show="allRequestData.length"
-              class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
-              ng-click="takeScreenshot()" ng-disabled="false">
-        <i class="fa fa-camera"></i>
-        Take screenshot [BETA]
-      </button>
+      <div class="btn-group btn-group-sm pull-left spacing text-uppercase"
+           ng-show="allRequestData.length">
+        <button type="button" class="btn btn-primary text-center text-uppercase hidden-sm"
+                ng-disabled="true">
+          <small class="hidden-md hidden-sm">
+            Download
+          </small>
+          <i class="hidden-lg fa fa-download"></i>
+        </button>
+        <button type="button" class="btn btn-default text-center"
+                ng-click="takeScreenshot('pdf')" ng-disabled="false">
+          <small class="hidden-md hidden-sm">
+            PDF
+          </small>
+          <i class="hidden-lg fa fa-file-pdf-o"></i>
+        </button>
+        <button type="button" class="btn btn-default text-center"
+                ng-click="takeScreenshot('png')" ng-disabled="false">
+          <small class="hidden-md hidden-sm">
+            PNG
+          </small>
+          <i class="hidden-lg fa fa-file-image-o"></i>
+        </button>
+        <button type="button" class="btn btn-default text-center"
+                ng-click="takeScreenshot()" ng-disabled="false">
+          <small class="hidden-md hidden-sm">
+            SVG
+          </small>
+          <i class="hidden-lg fa fa-file"></i>
+        </button>
+      </div>
     </div>
     
     <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
