changing template head

--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -5,16 +5,16 @@
     <title>Production Monitoring Platform</title>
     <base href="/pmp/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="lib/animate/animate.min.css" rel="stylesheet"/>
     <link href="css/pmp.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:900,400,400italic"
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900,400"
           rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="lib/jquery/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="lib/jquery-sortable/jquery-sortable.js"></script>
-    <script type="text/javascript" src="lib/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-animate.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
