--- a/pmp/static/partials/filter.html
+++ b/pmp/static/partials/filter.html
@@ -1,9 +1,7 @@
 <div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
-  <div ng-show="isEmpty(allStatus)">
-    <small>No data to filter</small>
-  </div>
-  <div ng-show="!isEmpty(allStatus)">
+  <div ng-show="isEmpty(allStatus)"><small>No data to filter</small></div>
 
+  <div ng-show="!isEmpty(allStatus)">
     <form class="form-group form-inline form-group-sm">
       <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Priority filter</small>
       <div class="input-group col-sm-12">
@@ -26,7 +24,7 @@
     <form class="form-group form-inline form-group-sm spacing">
       <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Status filter</small>
       <div class="input-group">
-        <div class="col-lg-6 col-md-6 col-sm-12" ng-repeat="(key, status) in allStatus">
+        <div class="col-lg-6 col-md-6 col-sm-12" ng-repeat="(key, _) in allStatus">
           <label class="checkbox-inline">
             <input type="checkbox" ng-model="allStatus[key]" ng-disabled="loadingData"
                    ng-change="updateRequestData();setURL()">
@@ -38,9 +36,10 @@
     
     <form class="form-group form-inline form-group-sm">
       <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">PWG filter</small>
-      <div class="col-sm-6 col-md-4 col-lg-4" ng-repeat="(key, status) in allPWG">
+      <div class="col-sm-6 col-md-4 col-lg-4" ng-repeat="(key, _) in allPWG">
         <label class="checkbox-inline">
-          <input type="checkbox" ng-model="allPWG[key]" ng-change="updateRequestData();setURL()">
+          <input type="checkbox" ng-model="allPWG[key]" ng-disabled="loadingData"
+                 ng-change="updateRequestData();setURL()">
           <small>{{key}}</small>
         </label>
       </div>
