--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -42,7 +42,8 @@
 
   </div>
 
-  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing">
+  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing"
+       ng-hide="true">
 
     <div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4">
       <a href="chains" ng-click="nav('/chains')">
