--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -28,10 +28,14 @@
         </label>
       </form>
       
-      <div class="input-group input-group-sm spacing" ng-show="graphType == 2">
-        <span class="hidden-sm input-group-addon text-uppercase">Probing</span>
+      <div class="input-group input-group-sm pull-left spacing text-uppercase"
+           ng-show="graphType == 2">
+        <span class="hidden-sm input-group-addon">Probing</span>
         <input type="text" class="form-control" ng-model="$parent.probing" ng-change="setURL()"
                placeholder="Default: 40">
+        <span class="btn btn-primary hidden-sm input-group-addon" ng-click="query(true)">
+          <i class="fa fa-refresh"></i>
+        </span>
       </div>
 
      <div class="input-group input-group-sm spacing" ng-show="graphType == 3">
