--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -23,90 +23,8 @@
       <i class="fa fa-share"></i>
       <small class="hidden-sm"> Share</small>
     </a>
-    
-    <div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
-
-      <div ng-show="isEmpty(status)">
-        <small>No data to filter</small>
-      </div>
-
-      <div ng-show="!isEmpty(status)">
-        <form class="form-group form-inline form-group-sm">
-          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Priority filter</small>
-          <div class="input-group col-sm-12">
-            <select class="form-control text-center" ng-model="priority.min"
-                    ng-change="updateRequestData();setURL()" ng-disabled="loadingData">
-              <option ng-repeat="(key, value) in priorityPerBlock"
-                      value="{{value}}">
-                {{key}}
-              </option>
-            </select>
-            <input type="text" class="form-control" placeholder="min" ng-disabled="loadingData"
-                   ng-model="priority.min" ng-change="updateRequestData();setURL()">
-            <div class="input-group-addon">
-              &le; x &le;
-            </div>
-            <select class="form-control text-center" ng-model="priority.max"
-                    ng-change="updateRequestData();setURL()"  ng-disabled="loadingData">
-              <option ng-repeat="(key, value) in priorityPerBlock"
-                      value="{{value}}">
-                {{key}}
-              </option>
-            </select>
-            <input type="text" class="form-control" placeholder="max" ng-disabled="loadingData"
-                   ng-model="priority.max" ng-change="updateRequestData();setURL()">
-          </div>
-        </form>
-        
-        <form class="form-group form-inline form-group-sm spacing">
-          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Status filter</small>
-          <div class="input-group">
-            <div class="col-lg-6 col-md-6 col-sm-12" ng-repeat="(key, s) in status">
-              <label class="checkbox-inline">
-                <input type="checkbox" ng-model="status[key]" ng-disabled="loadingData"
-                       ng-change="updateRequestData();setURL()">
-                <small>
-                  {{key}}
-                </small>
-              </label>
-            </div>
-          </div>
-        </form>
-        
-        <form class="form-group form-inline form-group-sm">
-          <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">PWG filter</small>
-          <div class="col-sm-6 col-md-4 col-lg-4" ng-repeat="(key, p) in pwg">
-            <label class="checkbox-inline">
-              <input type="checkbox" ng-model="pwg[key]" ng-disabled="loadingData"
-                     ng-change="updateRequestData();setURL()">
-              <small>
-                {{key}}
-              </small>
-            </label>
-          </div>
-        </form>
-      </div>
-    </div>
-
-
-    <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
-      <form class="form-group text-uppercase">
-        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12 spacing">
-          <input type="checkbox" ng-model="showDate" ng-change="setURL()">
-          <small>
-            Show time
-          </small>
-        </label>
-      </form>
-
-     <div class="input-group input-group-sm spacing">
-       <span class="hidden-sm input-group-addon text-uppercase">
-         Bins
-       </span>
-       <input type="number" class="form-control" ng-model="bins" ng-change="setURL()"
-              placeholder="Default: 10">
-     </div>
-    </div>
+    <div ng-include="filterPanelTemplate"></div>
+    <div ng-include="advancedPanelTemplate"></div>
     <div ng-include="sharePanelTemplate"></div>
   </div>
 </div>
