--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -3,12 +3,12 @@
 
   <head>
     <title>Production Monitoring Platform</title>
-    <base href="/"/>
+    <base href="/pmp/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="lib/animate/animate.min.css" rel="stylesheet"/>
-    <link href="css/pmp.css" rel="stylesheet"/>
+    <link href="build/pmp.build.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:900,400"
           rel="stylesheet" type="text/css"/>
 
@@ -21,12 +21,10 @@
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
     <script type="text/javascript" src="lib/zeroclipboard/ZeroClipboard.min.js"></script>
     <script type="text/javascript" src="lib/ui-bootstrap/ui-bootstrap-tpls-0.13.0.min.js"></script>
+    <script type="text/javascript" src="js/charts.js"></script>
+    <script type="text/javascript" src="build/pmp.build.min.js"></script>
 
-    <script src="js/charts.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-
-    <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png" />
   </head>
   <body ng-controller="MainController">
 
