--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -2,7 +2,9 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" id="measure">
     <linear-lifetime chart-data="allRequestData" task-chain="loadTaskChain" zoom-y="zoomOnY"
                      human-readable-numbers="humanReadableNumbers" class="spacing"></linear-lifetime>
-    <p ng-hide="isEmpty(listSubmitted)">List of requests on status submitted:</p>
+    <p ng-hide="isEmpty(listSubmitted)">
+      List of requests on status submitted:
+    </p>
     <div ng-repeat="(prepid, value) in listSubmitted" class="spacing">
       <div class="col-lg-3 col-md-3 col-sm-3">
         <small>
@@ -11,9 +13,8 @@
       </div>
       <div class="col-lg-9 col-md-9 col-sm-9">
         <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="{{value}}" aria-valuemin="0"
-               aria-valuemax="100" style="width: {{value}}%;">
-            {{value}}%
+          <div class="progress-bar" role="progressbar" aria-valuenow="{{value > 100 ? 100 : value}}" aria-valuemin="0" aria-valuemax="100" style="width: {{value > 100 ? 100 : value}}%;">
+            {{value > 100 ? '>100' : value}}%
           </div>
         </div>
       </div>
