chained campaign loadable in announced, historical error info

--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -21,7 +21,7 @@
                    See
                  </button>
                  <button type="button" class="btn btn-danger"
-                         ng-click="load(campaign, true)" ng-disabled="loadingData || growingMode">
+                         ng-click="load(campaign, true, false, true, true)" ng-disabled="loadingData || growingMode">
                    Append
                  </button>
                  <button type="button" class="btn btn-danger" ng-click="load('all')"
