--- a/pmp/static/partials/filter.html
+++ b/pmp/static/partials/filter.html
@@ -11,7 +11,9 @@
         </select>
         <input type="text" class="form-control" placeholder="min" ng-disabled="loadingData"
                ng-model="filterPriority[0]" ng-change="updateRequestData();setURL()">
-        <div class="input-group-addon">&le; x &le;</div>
+        <div class="input-group-addon">
+            &le;x&le;
+        </div>
         <select class="form-control text-center" ng-model="filterPriority[1]"
                 ng-change="updateRequestData();setURL()" ng-disabled="loadingData">
           <option ng-repeat="(key, value) in priorityPerBlock" value="{{value}}">{{key}}</option>
@@ -24,7 +26,7 @@
     <form class="form-group form-inline form-group-sm spacing">
       <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Status filter</small>
       <div class="input-group">
-        <div class="col-lg-6 col-md-6 col-sm-12" ng-repeat="(key, _) in allStatus">
+        <div class="col-lg-6 col-md-4 col-sm-4 col-xs-6" ng-repeat="(key, _) in allStatus">
           <label class="checkbox-inline">
             <input type="checkbox" ng-model="allStatus[key]" ng-disabled="loadingData"
                    ng-change="updateRequestData();setURL()">
@@ -35,8 +37,8 @@
     </form>
     
     <form class="form-group form-inline form-group-sm">
-      <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">PWG filter</small>
-      <div class="col-sm-6 col-md-4 col-lg-4" ng-repeat="(key, _) in allPWG">
+      <small class="text-uppercase col-xs-12 col-sm-12 col-md-12 col-lg-12">PWG filter</small>
+      <div class="col-sm-3 col-md-3 col-lg-4 col-xs-4" ng-repeat="(key, _) in allPWG">
         <label class="checkbox-inline">
           <input type="checkbox" ng-model="allPWG[key]" ng-disabled="loadingData"
                  ng-change="updateRequestData();setURL()">
