--- a/pmp/static/partials/share.html
+++ b/pmp/static/partials/share.html
@@ -1,8 +1,8 @@
 <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <div class="input-group input-group-sm pull-left spacing text-uppercase">
-    <span class="btn btn-primary hidden-sm input-group-addon pointer text-uppercase"
+    <span class="btn btn-primary input-group-addon pointer text-uppercase"
           ng-click="setURL(); shortenURL()">
-      Shorten
+      <small>Shorten</small>
     </span>
     <input id="url" type="text" class="form-control" ng-model="url"
            placeholder="Refresh to get URL">
