more changes for phone support

--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -43,7 +43,7 @@
               placeholder="Default: 10">
      </div>
 
-      <div class="btn-group btn-group-sm pull-left spacing text-uppercase"
+      <div class="btn-group btn-group-sm pull-left spacing text-uppercase hidden-xs"
            ng-show="allRequestData.length">
         <button type="button" class="btn text-center text-uppercase hidden-sm"
                 ng-disabled="true">
