--- a/pmp/static/partials/share.html
+++ b/pmp/static/partials/share.html
@@ -1,4 +1,4 @@
-<div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div id="share" class="collapse hidden-xs col-sm-12 col-md-12 col-lg-12">
   <div class="input-group input-group-sm pull-left spacing text-uppercase">
     <span class="btn btn-primary input-group-addon pointer text-uppercase"
           ng-click="setURL(); shortenURL()">
