--- a/pmp/static/partials/advanced.html
+++ b/pmp/static/partials/advanced.html
@@ -34,12 +34,12 @@
       </form>
       
       <div class="input-group input-group-sm spacing text-uppercase" ng-show="graphType == 2">
-        <span class="hidden-sm input-group-addon">Probing</span>
+        <div class="hidden-sm input-group-addon">Probing</div>
         <input type="number" class="form-control" ng-model="$parent.probing" ng-change="setURL()"
                placeholder="Default: 40">
-        <span class="btn btn-primary hidden-sm input-group-addon" ng-click="query(true)">
+        <div class="btn btn-primary input-group-addon" ng-click="query(true)">
           <i class="fa fa-refresh"></i>
-        </span>
+        </div>
       </div>
 
      <div class="input-group input-group-sm spacing text-uppercase" ng-show="graphType == 3">
