--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -10,7 +10,7 @@
     <multiple-pie-charts color-domain="piecharts.domain" table-title="Campaigns"
                          data="allRequestData" full-terms="piecharts.fullTerms"
                          compact-terms="piecharts.compactTerms" sum-by="piecharts.sum"
-                         nest-by="piecharts.nestBy" show-upcoming="growingMode"
+                         nest-by="piecharts.nestBy" show-upcoming="displayChains"
                          human-readable-numbers="humanReadableNumbers">
     </multiple-pie-charts>
     
