--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -80,9 +80,9 @@
       <i class="fa fa-share"></i>
       <small> Share</small>
     </a>
-    <div ng-include="filterPanelTemplate"></div>
-    <div ng-include="advancedPanelTemplate"></div>
-    <div ng-include="sharePanelTemplate"></div>
+    <div ng-include="'build/filter.min.html'"></div>
+    <div ng-include="'build/advanced.min.html'"></div>
+    <div ng-include="'build/filter.min.html'"></div>
   </div>
 </div>
 
