--- a/pmp/templates/valid-head-dev.html
+++ b/pmp/templates/valid-head-dev.html
@@ -29,7 +29,15 @@
     <!--pMp JS-->    
     <script type="text/javascript" src="js/charts.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="js/controllers/main.js"></script>
+    <script type="text/javascript" src="js/controllers/index.js"></script>
+    <script type="text/javascript" src="js/controllers/present.js"></script>
+    <script type="text/javascript" src="js/controllers/historical.js"></script>
+    <script type="text/javascript" src="js/controllers/performance.js"></script>
+    <!-- Currently not used
+    <script type="text/javascript" src="js/controllers/chains.js"></script>
+    -->
+    <script type="text/javascript" src="js/controllers/typeahead.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png" />
