--- a/pmp/templates/valid-head-dev.html
+++ b/pmp/templates/valid-head-dev.html
@@ -29,6 +29,7 @@
     <!--pMp JS-->    
     <script type="text/javascript" src="js/charts.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/services/info.js"></script>
     <script type="text/javascript" src="js/controllers/main.js"></script>
     <script type="text/javascript" src="js/controllers/index.js"></script>
     <script type="text/javascript" src="js/controllers/present.js"></script>
