--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -3,10 +3,10 @@
    <div class="row">
      <div class="row">
        <h1 class="pull-right white hidden-xs hidden-sm">
-         <strong>{{title}}</strong>
+         <strong>{{page.title}}{{mode}}</strong>
        </h1>
        <h3 class="pull-right white hidden-md hidden-lg">
-         <strong>{{title}}</strong>
+         <strong>{{page.title}}{{mode}}</strong>
        </h3>
      </div>
      <div class="row">
@@ -82,8 +82,8 @@
     </a>
     <div ng-include="'build/filter.min.html'"></div>
     <div ng-include="'build/advanced.min.html'"></div>
-    <div ng-include="'build/filter.min.html'"></div>
+    <div ng-include="'build/share.min.html'"></div>
   </div>
 </div>
 
-<div ng-include="plotTemplate"></div>
+<div ng-include="page.template"></div>
