adding share controller

--- a/pmp/templates/valid-head-dev.html
+++ b/pmp/templates/valid-head-dev.html
@@ -35,9 +35,8 @@
     <script type="text/javascript" src="js/controllers/present.js"></script>
     <script type="text/javascript" src="js/controllers/historical.js"></script>
     <script type="text/javascript" src="js/controllers/performance.js"></script>
-    <!-- Currently not used
-    <script type="text/javascript" src="js/controllers/chains.js"></script>
-    -->
+    <!-- Currently not used <script type="text/javascript" src="js/controllers/chains.js"></script> -->
+    <script type="text/javascript" src="js/controllers/share.js"></script>
     <script type="text/javascript" src="js/controllers/typeahead.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
 
