--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -12,10 +12,9 @@
      <div class="row">
        <div class="well">
          <div class="row">
-           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-controller="TypeaheadCtrl">
+           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-controller="TypeaheadController">
              <div class="input-group spacing">
-               <input type="text" ng-model="campaign" ng-change="getSuggestions(campaign)"
-                      typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
+               <input type="text" ng-model="campaign" ng-change="getSuggestions(campaign, page.typeahead)" typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
                       class="form-control" autocomplete="off"
                       placeholder="Start typing to search...">
                <span class="input-group-btn">
