--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -53,7 +53,7 @@
      </div>
      
      <div class="row">
-       <div class="panel" ng-init="updateDate()" ng-show="showDate">
+       <div class="panel" ng-show="showDate">
          <div class="panel-body">
            Current time:
            <strong>
